# procedurally-generated-music

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  STRUCTURE.md
include/procedurally-generated-music/: player.h
midi/: output.mid
src/: chords.cpp  main.cpp  player.cpp
